--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.12"
 fastapi = "^0.111.0"
 sqlmodel = "^0.0.18"
 asyncpg = "^0.29.0"
+sqlalchemy-mixins = "^2.0.5"
 
 
 [build-system]
